--- a/app.ini
+++ b/app.ini
@@ -1,3 +1,5 @@
+; """ This file contain the required configuration for the application to be deployed."
+
 [uwsgi]
 module = wsgi:app
 master = true
