--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 marshmallow==3.18.0
 marshmallow-sqlalchemy==0.28.1
+mysqlclient==2.1.1
 packaging==21.3
 PyJWT==2.5.0
 PyMySQL==1.0.2
