--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
+alembic==1.8.1
+bcrypt==4.0.1
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==3.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.3
 MarkupSafe==2.1.1
+marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
+mysqlclient==2.1.1
+packaging==21.3
+PyJWT==2.5.0
+PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dotenv==0.21.0
+six==1.16.0
+SQLAlchemy==1.4.42
+uWSGI==2.0.20
 Werkzeug==2.2.2
